--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,132 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+  --primary-color: #ffffff;
+  --secondary-color: #1995ed;
+  --tertiary-color: #32CD32; 
+  --footer-bg-color: #f5f7fa;
+}
+
+* {
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+/*  */
+.container-links a {
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+.container-links a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--tertiary-color);
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.4s ease;
+}
+.container-links a:hover {
+  color: var(--tertiary-color);
+  transform: scale(1.1);
+}
+.container-links a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+/*  */
+
+.aboutMore a {
+  transition: color 0.3s ease;
+}
+.aboutMore svg {
+  transition: transform 0.3s ease;
+}
+.aboutMore svg path {
+  stroke: var(--secondary-color);
+}
+.aboutMore:hover a {
+  color: var(--tertiary-color);
+}
+.aboutMore:hover svg path {
+  stroke: var(--tertiary-color);
+}
+.aboutMore:hover svg {
+  transform: translateX(10px);
+}
+
+/* FORM */
+
+.input-field {
+  position: relative;
+  margin: 20px 0px;
+}
+.input-field input {
+  width: 250px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 0 15px;
+  border: 1px solid var(--secondary-color);
+  background: transparent;
+  color: var(--secondary-color);
+  outline: none;
+}
+.input-field label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  color: var(--secondary-color);
+  font-size: 15px;
+  pointer-events: none;
+  transition: .3s;
+}
+input:focus ~ label,
+input:not(:placeholder-shown) ~ label {
+  top: 0;
+  left: 10px;
+  font-size: 12px;
+  padding: 0 5px;
+  background-color: var(--primary-color);
+  color: var(--tertiary-color);
+}
+.input-field input::placeholder {
+  color: transparent;
+}
+.input-field input:focus,
+.input-field input:not(:placeholder-shown) {
+  border-color: var(--tertiary-color);
+}
+
+/* BOTTOM FORM */
+
+.button {
+  padding: 10px 20px;
+  margin-top: 30px;
+}
+.button a {
+  padding: 5px;
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--primary-color);
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+.button a:hover {
+  background-color: var(--tertiary-color);
+  transform: scale(1.1);
+}
