--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,3 +130,96 @@ input:not(:placeholder-shown) ~ label {
   background-color: var(--tertiary-color);
   transform: scale(1.1);
 }
+
+/* Form Register */
+.form-register {
+  width: 350px;
+  height: 500px;
+  padding: 25px;
+  background: var(--primary-color);
+  border: 1px solid var(--secondary-color);
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.2);
+}
+.form-register.hover-border {
+  border-color: var(--tertiary-color);
+}
+
+.contianer-logo {
+  width: 150px;
+  height: 100px;
+}
+.contianer-logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.input-field {
+  position: relative;
+  margin: 15px 0px;
+}
+.input-field input {
+  width: 250px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 0 15px;
+  border: 1px solid var(--secondary-color);
+  background: transparent;
+  color: var(--tertiary-color);
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+.input-field label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  color: var(--secondary-color);
+  font-size: 15px;
+  pointer-events: none;
+  transition: .3s;
+}
+input:focus ~ label,
+input:not(:placeholder-shown) ~ label {
+  top: 0;
+  left: 10px;
+  font-size: 12px;
+  padding: 0 5px;
+  background-color: var(--primary-color);
+  color: var(--tertiary-color);
+}
+.input-field input::placeholder {
+  color: transparent;
+}
+.input-field input:focus,
+.input-field input:not(:placeholder-shown) {
+  border-color: var(--tertiary-color);
+}
+
+.button-register {
+  position: absolute;
+  bottom: 10px;
+  right: 325px;
+}
+.button-register a {
+  padding: 5px 15px;
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--primary-color);
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+.button-register a:hover {
+  background-color: var(--tertiary-color);
+  transform: scale(1.1);
+}
