--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,25 @@
 }
 
 /*  */
+.text-hidden {
+  opacity: 0;
+  transform: translateX(-10px);
+  transition: opacity 200ms ease-in-out, transform 100ms ease-in-out;
+  display: hidden;
+}
+
+.text-visible{
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
+  transition-delay: 100ms; /* Adjust the delay as needed */
+}
+
+.button-transition {
+  transition: transform 300ms ease-in-out;
+}
+
+/*  */
 .container-links a {
   transition: color 0.3s ease, transform 0.3s ease;
 }
