--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,29 @@
   margin: 0;
 }
 
+.hero {
+  position: relative;
+  overflow: hidden;
+}
+
+.hero::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../../public/img/fondo-hero.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.15;
+  z-index: 0;
+}
+
+.hero .relative {
+  z-index: 10; /* Asegura que el contenido esté por encima del fondo */
+}
 
 /*  */
 .text-hidden {
@@ -72,13 +95,7 @@
   transition: transform 0.3s ease;
 }
 .aboutMore svg path {
-  stroke: var(--secondary-color);
-}
-.aboutMore:hover a {
-  color: var(--tertiary-color);
-}
-.aboutMore:hover svg path {
-  stroke: var(--tertiary-color);
+  stroke: var(--primary-color);
 }
 .aboutMore:hover svg {
   transform: translateX(10px);
@@ -273,4 +290,24 @@ input:not(:placeholder-shown) ~ label {
   .titleSettings {
     display: flex;
   }
+}
+
+.custom-shape-divider-top-1718826329 {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1718826329 svg {
+  position: relative;
+  display: block;
+  width: calc(167% + 1.3px);
+  height: 158px;
+}
+
+.custom-shape-divider-top-1718826329 .shape-fill {
+  fill: var(--secondary-color);
 }
