--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,36 @@
   z-index: 10; /* Asegura que el contenido esté por encima del fondo */
 }
 
+@media (max-width: 768px) {
+  .hero::before {
+    background-image: url('../../public/img/fondo-hero-mobile.png');
+  }
+}
+
+.container-img {
+  position: relative;
+  overflow: hidden;
+}
+
+.container-img::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../../public/img/container.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.8;
+  z-index: 0;
+}
+
+.container-img {
+  z-index: 10;
+}
+
 /*  */
 .text-hidden {
   opacity: 0;
