--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,23 @@
   --footer-bg-color: #f5f7fa;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 * {
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
@@ -149,7 +166,7 @@
   transition: transform 0.3s ease;
 }
 .aboutMore svg path {
-  stroke: var(--primary-color);
+  stroke: #121212;
 }
 .aboutMore:hover svg {
   transform: translateX(10px);
@@ -227,7 +244,7 @@ input:not(:placeholder-shown) ~ label {
   width: 350px;
   height: 500px;
   padding: 25px;
-  background: var(--primary-color);
+  background: #121212;
   border: 1px solid var(--secondary-color);
   display: flex;
   flex-direction: column;
@@ -282,7 +299,7 @@ input:not(:placeholder-shown) ~ label {
   left: 10px;
   font-size: 12px;
   padding: 0 5px;
-  background-color: var(--primary-color);
+  background-color: #121212;
   color: var(--tertiary-color);
 }
 .input-field input::placeholder {
@@ -312,6 +329,7 @@ input:not(:placeholder-shown) ~ label {
 }
 .button-register button:hover {
   background-color: var(--tertiary-color);
+  color: #fff;
   transform: scale(1.1);
 }
 
